Use getFirst() for list